--- a/main.tex
+++ b/main.tex
@@ -343,22 +343,21 @@ $\mathsf{RA}^{(\mathrm{DEL})}_i$ has $\mathsf{aux}=(\sid,\mathsf{ctr}{=}2,\maths
 \noindent\emph{Note.} The above acceptance rule enforces the exact-one semantics; see Theorem~\ref{thm:one-shot}.
 
 \section{Security}\label{sec:security}
-We sketch the core arguments; full proofs follow the standard game-hopping template with RA-oracle idealization.
-
+We sketch the core arguments; full proofs follow standard game-hopping with an idealized \textsf{Fresh} predicate.
 \paragraph{Safety: one-shot unforgeability.}
 \begin{theorem}[One-shot from threshold-in-TEE]\label{thm:one-shot}
-Assume (i) the underlying threshold signature is unforgeable, (ii) at least one enclave is honest and transitions to post-delete state after producing $\sigma^{\star}$, (iii) \textsf{Fresh} prevents replay/rollback of pre-delete states, and (iv) vendor RA is unforgeable under the stated trust roots. Then producing two distinct valid signatures $(\sigma_1,\sigma_2)$ for the same $pk$ in session $\mathsf{sid}$ (on either same or distinct messages) is infeasible for PPT adversaries.
+Assume (i) the underlying threshold signature is unforgeable, (ii) at least one enclave is honest and transitions to post-delete state after producing $\sigma^{\star}$, (iii) \textsf{Fresh} prevents replay/rollback of pre-delete states, and (iv) vendor RA is unforgeable under the stated trust roots. Then producing two distinct accepting artifacts for the same $pk$ in session $\mathsf{sid}$—i.e., two certificates that both pass \textsf{VerifyAOSC}—with $\sigma_1 \neq \sigma_2$ is infeasible for PPT adversaries.
 \end{theorem}
 
 \begin{proof}[Proof sketch]
-Suppose two signatures exist. If either is produced without $t$ valid shares, we break threshold unforgeability. Otherwise, at least $t$ shares were live at each signing. Because the accepting certificate contains at least $k$ valid deletion attestations and, under the honest-minority assumption, at least one of those enclaves is honest and has deleted its share bound to $(\mathsf{sid},m^{\star},\sigma^{\star})$, the only routes to a second signature are: (A) forge RA to claim deletion without deleting (contradicts RA unforgeability); (B) roll back an honest enclave past delete (contradicts \textsf{Fresh}); or (C) compromise enough enclaves (respecting diversity constraints) to assemble $t$ fresh shares again (violates honest-minority).
+Suppose two accepting artifacts exist. If either signature is produced without $t$ valid shares, we break threshold unforgeability. Otherwise, at least $t$ shares were live at each signing. Any accepting certificate contains at least $k$ valid deletion attestations, and under the honest-minority assumption at least one of those enclaves is honest and has deleted its share bound to $(\mathsf{sid},m^{\star},\sigma^{\star})$. The only routes to a second accepted signature are: (A) forge RA to claim deletion without deleting (contradicts RA unforgeability); (B) roll back an honest enclave past delete (contradicts \textsf{Fresh}); or (C) compromise enough enclaves (meeting policy/diversity constraints) to reassemble $t$ fresh shares (violates honest-minority).
 \end{proof}
 
 \paragraph{Liveness.}
-With $t{=}n$ the protocol requires all enclaves to participate; a crashed or aborting enclave prevents progress. We adopt a bounded timeout: if signing fails, $C$ abandons $\sid$ and re-instantiates with fresh enclaves. In deployments desiring partial progress, \prot{} supports $t<n$ with two caveats: (i) \emph{deletion} attestations must reach $k\!\ge\!t$; (ii) the exact-one property is now conditioned on at least one of the $k$ attesting enclaves being honest.
+With $t{=}n$ the protocol requires all enclaves to participate; a crashed or aborting enclave prevents progress. We adopt a bounded timeout: if signing fails, $C$ abandons $\sid$ and re-instantiates (fresh $\sid$ and DKG) with fresh enclaves. In deployments desiring partial progress, \prot{} supports $t<n$ with two caveats: (i) \emph{deletion} attestations must reach $k\!\ge\!t$; (ii) the exact-one property is now conditioned on at least one of the $k$ attesting enclaves being honest.
 
 \paragraph{Additive security via heterogeneity.}
-If attestations are independent across vendors/geographies/operators, the minimum attack cost is approximately the sum of per-enclave compromise costs (or, more conservatively, the minimum over all subsets of size $t$). We recommend explicit \emph{diversity constraints} in policy (e.g., “at least two vendors and three physical operators”).
+If attestations are independent across vendors/geographies/operators, the minimum cost\mbox{-}of\mbox{-}attack is approximately the sum of the $k$ cheapest per\mbox{-}enclave compromise costs (this approximation assumes independence and no bulk\mbox{-}attack economies; otherwise treat it as a lower bound). We recommend explicit \emph{diversity constraints} in policy (e.g., “at least two vendors and three physical operators”).
 
 \paragraph{Freshness and anti-replay.}
 Verifiers enforce an abstract replay predicate $\textsf{Fresh}$ rather than trusted time. For each $(\sid,\mathsf{eid})$, accept at most one attestation per counter value $\mathsf{ctr}\!\in\!\{0,1,2\}$ (JOIN, DKG, DEL) and require strict monotonicity $0\!\rightarrow\!1\!\rightarrow\!2$. Concretely, for every RA$^{(\mathrm{DEL})}$ in the certificate, check $\textsf{Fresh}(\mathsf{RA}^{(\mathrm{DEL})},\sid){=}1$ and that its $\mathsf{aux}$ binds $(\sid,\mathsf{ctr}{=}2,\mathsf{eid},pk,m^{\star},\sigma^{\star})$. Instantiations of $\textsf{Fresh}$ include enclave-backed monotonic storage or an external append-only anchor; no trusted timestamps are assumed.
